Bugfix: removed whitespace and made nav bar sticky

--- a/frontend/src/components/pages/GroupProfileEdit.css
+++ b/frontend/src/components/pages/GroupProfileEdit.css
@@ -109,7 +109,6 @@
 
   .body-cus {
     background-color: #f2f2f2;
-    padding: 5px 5px 5px 5px;
   }
 
   
